# errno

./: .gitignore  CMakeLists.txt  README.md  clib.json  errno.spec.in  error.txt
.github/: CONTRIBUTING.md
errno/: CMakeLists.txt
errno/include/scic/: errno.h
errno/include/scic/_common/: default.h  inline.h
errno/include/scic/errno/: default.h  inline.h  message.h
errno/src/: CMakeLists.txt
errno/src/errno/: error.c  message.c  stream.c  strerrno.c
