cmake_minimum_required(VERSION 3.0)

FILE(STRINGS "VERSION" ERRNO_VERSION)

PROJECT(errno
	LANGUAGES C
VERSION ${ERRNO_VERSION})


INCLUDE(${CMAKE_SOURCE_DIR}/cmake/CPackConfig.cmake)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/errno.spec.in" "${CMAKE_CURRENT_BINARY_DIR}/errno.spec" @ONLY IMMEDIATE)
SET(CPACK_RPM_USER_BINARY_SPECFILE "${CMAKE_CURRENT_BINARY_DIR}/errno.spec")
SET(CPACK_PACKAGE_RELEASE 2)
SET(CPACK_RPM_PACKAGE_SOURCES ON)
INCLUDE(CPack)

ADD_SUBDIRECTORY("errno")

OPTION(ERRNO_BUILD_TESTS "Build unit tests" ON)
IF(ERRNO_BUILD_TESTS)
	enable_testing()
	ADD_SUBDIRECTORY("test")
ENDIF(ERRNO_BUILD_TESTS)

INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/README.md" DESTINATION share/doc/liberrno/)
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE" DESTINATION share/licenses/liberrno/)
